--- a/source/manifest.json
+++ b/source/manifest.json
@@ -468,8 +468,8 @@
     ],
     "version": "1.12.2"
   },
-  "name": "Cluracan's Learner Pack",
+  "name": "Firmum Libra",
   "overrides": "overrides",
   "projectID": 313193,
-  "version": "0.0.1"
+  "version": "0.1.2"
 }
