--- a/source/manifest.json
+++ b/source/manifest.json
@@ -68,7 +68,7 @@
     },
     {
       "projectID": 231382,
-      "fileID": 2710581,
+      "fileID": 2744222,
       "required": true
     },
     {
@@ -88,7 +88,7 @@
     },
     {
       "projectID": 242818,
-      "fileID": 2618630,
+      "fileID": 2779848,
       "required": true
     },
     {
@@ -493,7 +493,7 @@
     },
     {
       "projectID": 245174,
-      "fileID": 2594243,
+      "fileID": 2755787,
       "required": true
     },
     {
@@ -610,6 +610,21 @@
       "projectID": 243121,
       "fileID": 2722372,
       "required": true
+    },
+    {
+      "projectID": 223666,
+      "fileID": 2705585,
+      "required": true
+    },
+    {
+      "projectID": 285492,
+      "fileID": 2705304,
+      "required": true
+    },
+    {
+      "projectID": 306028,
+      "fileID": 2762334,
+      "required": true
     }
   ],
   "manifestType": "minecraftModpack",
@@ -626,5 +641,5 @@
   "name": "Firmum Libra",
   "overrides": "overrides",
   "projectID": 313193,
-  "version": "0.3.3"
+  "version": "0.3.4"
 }
