* v0.3.4RC - Jake Moe - 22 Nov 2019   * Release Candidate!   * Now with a custom main menu image!   * Added Ender Storage   * Added Project Intelligence   * Added Resource Loader   * Added ThaumicJEI   * Added Thaumic Energistics   * Updated README URL   * Updated Forge and all mods to latest version

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -3,7 +3,7 @@
   "files": [
     {
       "projectID": 228404,
-      "fileID": 2713315,
+      "fileID": 2824799,
       "required": true
     },
     {
@@ -13,22 +13,32 @@
     },
     {
       "projectID": 223794,
-      "fileID": 2652453,
+      "fileID": 2747063,
+      "required": true
+    },
+    {
+      "projectID": 277631,
+      "fileID": 2750633,
       "required": true
     },
     {
       "projectID": 223735,
-      "fileID": 2690354,
+      "fileID": 2676866,
       "required": true
     },
     {
       "projectID": 60092,
-      "fileID": 2712288,
+      "fileID": 2672438,
       "required": true
     },
     {
       "projectID": 241721,
-      "fileID": 2716590,
+      "fileID": 2757379,
+      "required": true
+    },
+    {
+      "projectID": 250363,
+      "fileID": 2746011,
       "required": true
     },
     {
@@ -48,7 +58,22 @@
     },
     {
       "projectID": 238403,
-      "fileID": 2691084,
+      "fileID": 2443194,
+      "required": true
+    },
+    {
+      "projectID": 229876,
+      "fileID": 2483393,
+      "required": true
+    },
+    {
+      "projectID": 228027,
+      "fileID": 2574880,
+      "required": true
+    },
+    {
+      "projectID": 220318,
+      "fileID": 2814040,
       "required": true
     },
     {
@@ -58,12 +83,17 @@
     },
     {
       "projectID": 224791,
-      "fileID": 2713291,
+      "fileID": 2822288,
       "required": true
     },
     {
       "projectID": 228525,
-      "fileID": 2720956,
+      "fileID": 2727800,
+      "required": true
+    },
+    {
+      "projectID": 225643,
+      "fileID": 2782181,
       "required": true
     },
     {
@@ -78,7 +108,7 @@
     },
     {
       "projectID": 235279,
-      "fileID": 2619468,
+      "fileID": 2813538,
       "required": true
     },
     {
@@ -93,7 +123,7 @@
     },
     {
       "projectID": 69162,
-      "fileID": 2669253,
+      "fileID": 2716100,
       "required": true
     },
     {
@@ -103,22 +133,22 @@
     },
     {
       "projectID": 247007,
-      "fileID": 2716477,
+      "fileID": 2739226,
       "required": true
     },
     {
       "projectID": 267602,
-      "fileID": 2642375,
+      "fileID": 2809915,
       "required": true
     },
     {
       "projectID": 250398,
-      "fileID": 2522248,
+      "fileID": 2731319,
       "required": true
     },
     {
       "projectID": 231484,
-      "fileID": 2696150,
+      "fileID": 2733516,
       "required": true
     },
     {
@@ -128,7 +158,12 @@
     },
     {
       "projectID": 239197,
-      "fileID": 2713681,
+      "fileID": 2724129,
+      "required": true
+    },
+    {
+      "projectID": 257814,
+      "fileID": 2830127,
       "required": true
     },
     {
@@ -148,12 +183,12 @@
     },
     {
       "projectID": 239286,
-      "fileID": 2720719,
+      "fileID": 2821917,
       "required": true
     },
     {
       "projectID": 232758,
-      "fileID": 2714091,
+      "fileID": 2811241,
       "required": true
     },
     {
@@ -162,18 +197,33 @@
       "required": true
     },
     {
-      "projectID": 223565,
-      "fileID": 2710583,
+      "projectID": 79616,
+      "fileID": 2777813,
       "required": true
     },
     {
-      "projectID": 64578,
-      "fileID": 2708308,
+      "projectID": 223565,
+      "fileID": 2753317,
+      "required": true
+    },
+    {
+      "projectID": 265642,
+      "fileID": 2802614,
       "required": true
     },
     {
       "projectID": 231868,
-      "fileID": 2699428,
+      "fileID": 2822401,
+      "required": true
+    },
+    {
+      "projectID": 64578,
+      "fileID": 2809869,
+      "required": true
+    },
+    {
+      "projectID": 245174,
+      "fileID": 2755787,
       "required": true
     },
     {
@@ -202,8 +252,13 @@
       "required": true
     },
     {
+      "projectID": 278494,
+      "fileID": 2809906,
+      "required": true
+    },
+    {
       "projectID": 238551,
-      "fileID": 2608278,
+      "fileID": 2744766,
       "required": true
     },
     {
@@ -213,22 +268,22 @@
     },
     {
       "projectID": 231951,
-      "fileID": 2676501,
+      "fileID": 2799143,
       "required": true
     },
     {
       "projectID": 266515,
-      "fileID": 2699878,
+      "fileID": 2745321,
       "required": true
     },
     {
       "projectID": 236307,
-      "fileID": 2718584,
+      "fileID": 2779016,
       "required": true
     },
     {
       "projectID": 251389,
-      "fileID": 2718592,
+      "fileID": 2732756,
       "required": true
     },
     {
@@ -238,12 +293,17 @@
     },
     {
       "projectID": 223094,
-      "fileID": 2670367,
+      "fileID": 2482481,
       "required": true
     },
     {
       "projectID": 227049,
       "fileID": 2564573,
+      "required": true
+    },
+    {
+      "projectID": 228756,
+      "fileID": 2747935,
       "required": true
     },
     {
@@ -253,17 +313,37 @@
     },
     {
       "projectID": 32274,
-      "fileID": 2714302,
+      "fileID": 2755458,
+      "required": true
+    },
+    {
+      "projectID": 267939,
+      "fileID": 2823958,
+      "required": true
+    },
+    {
+      "projectID": 296289,
+      "fileID": 2810213,
       "required": true
     },
     {
       "projectID": 238222,
-      "fileID": 2719436,
+      "fileID": 2822849,
       "required": true
     },
     {
       "projectID": 240630,
-      "fileID": 2719452,
+      "fileID": 2728585,
+      "required": true
+    },
+    {
+      "projectID": 262366,
+      "fileID": 2791068,
+      "required": true
+    },
+    {
+      "projectID": 257818,
+      "fileID": 2829983,
       "required": true
     },
     {
@@ -273,12 +353,22 @@
     },
     {
       "projectID": 233105,
-      "fileID": 2714365,
+      "fileID": 2745846,
       "required": true
     },
     {
       "projectID": 268560,
-      "fileID": 2721342,
+      "fileID": 2798295,
+      "required": true
+    },
+    {
+      "projectID": 268566,
+      "fileID": 2798297,
+      "required": true
+    },
+    {
+      "projectID": 268567,
+      "fileID": 2798298,
       "required": true
     },
     {
@@ -288,12 +378,17 @@
     },
     {
       "projectID": 238747,
-      "fileID": 2486868,
+      "fileID": 2739582,
       "required": true
     },
     {
       "projectID": 220954,
       "fileID": 2693544,
+      "required": true
+    },
+    {
+      "projectID": 250294,
+      "fileID": 2729618,
       "required": true
     },
     {
@@ -303,7 +398,7 @@
     },
     {
       "projectID": 243478,
-      "fileID": 2589773,
+      "fileID": 2745657,
       "required": true
     },
     {
@@ -323,17 +418,72 @@
     },
     {
       "projectID": 277064,
-      "fileID": 2716711,
+      "fileID": 2817910,
+      "required": true
+    },
+    {
+      "projectID": 74120,
+      "fileID": 2711439,
+      "required": true
+    },
+    {
+      "projectID": 306626,
+      "fileID": 2693931,
+      "required": true
+    },
+    {
+      "projectID": 228816,
+      "fileID": 2699056,
       "required": true
     },
     {
       "projectID": 223008,
-      "fileID": 2670112,
+      "fileID": 2828357,
+      "required": true
+    },
+    {
+      "projectID": 228815,
+      "fileID": 2699055,
+      "required": true
+    },
+    {
+      "projectID": 221857,
+      "fileID": 2771840,
+      "required": true
+    },
+    {
+      "projectID": 306770,
+      "fileID": 2731963,
       "required": true
     },
     {
       "projectID": 260327,
-      "fileID": 2712303,
+      "fileID": 2789626,
+      "required": true
+    },
+    {
+      "projectID": 306028,
+      "fileID": 2762334,
+      "required": true
+    },
+    {
+      "projectID": 241665,
+      "fileID": 2724967,
+      "required": true
+    },
+    {
+      "projectID": 291499,
+      "fileID": 2685154,
+      "required": true
+    },
+    {
+      "projectID": 243121,
+      "fileID": 2759240,
+      "required": true
+    },
+    {
+      "projectID": 59816,
+      "fileID": 2751591,
       "required": true
     },
     {
@@ -347,8 +497,13 @@
       "required": true
     },
     {
+      "projectID": 226447,
+      "fileID": 2477566,
+      "required": true
+    },
+    {
       "projectID": 224641,
-      "fileID": 2707388,
+      "fileID": 2745848,
       "required": true
     },
     {
@@ -357,8 +512,23 @@
       "required": true
     },
     {
+      "projectID": 256141,
+      "fileID": 2746408,
+      "required": true
+    },
+    {
+      "projectID": 248453,
+      "fileID": 2785465,
+      "required": true
+    },
+    {
+      "projectID": 246010,
+      "fileID": 2694397,
+      "required": true
+    },
+    {
       "projectID": 251792,
-      "fileID": 2709952,
+      "fileID": 2789696,
       "required": true
     },
     {
@@ -368,7 +538,7 @@
     },
     {
       "projectID": 223852,
-      "fileID": 2642386,
+      "fileID": 2777929,
       "required": true
     },
     {
@@ -382,13 +552,18 @@
       "required": true
     },
     {
-      "projectID": 245211,
-      "fileID": 2667280,
+      "projectID": 223666,
+      "fileID": 2750063,
       "required": true
     },
     {
-      "projectID": 227639,
-      "fileID": 2618264,
+      "projectID": 285492,
+      "fileID": 2705304,
+      "required": true
+    },
+    {
+      "projectID": 245211,
+      "fileID": 2667280,
       "required": true
     },
     {
@@ -417,8 +592,13 @@
       "required": true
     },
     {
+      "projectID": 227639,
+      "fileID": 2818055,
+      "required": true
+    },
+    {
       "projectID": 74072,
-      "fileID": 2693496,
+      "fileID": 2809406,
       "required": true
     },
     {
@@ -427,203 +607,28 @@
       "required": true
     },
     {
+      "projectID": 247111,
+      "fileID": 2823642,
+      "required": true
+    },
+    {
       "projectID": 245480,
       "fileID": 2691542,
       "required": true
     },
     {
+      "projectID": 245755,
+      "fileID": 2734498,
+      "required": true
+    },
+    {
       "projectID": 260912,
-      "fileID": 2705817,
+      "fileID": 2745852,
       "required": true
     },
     {
       "projectID": 247921,
       "fileID": 2670570,
-      "required": true
-    },
-    {
-      "projectID": 225643,
-      "fileID": 2698039,
-      "required": true
-    },
-    {
-      "projectID": 221857,
-      "fileID": 2717443,
-      "required": true
-    },
-    {
-      "projectID": 248453,
-      "fileID": 2640952,
-      "required": true
-    },
-    {
-      "projectID": 59816,
-      "fileID": 2697894,
-      "required": true
-    },
-    {
-      "projectID": 278494,
-      "fileID": 2695388,
-      "required": true
-    },
-    {
-      "projectID": 229876,
-      "fileID": 2483393,
-      "required": true
-    },
-    {
-      "projectID": 228756,
-      "fileID": 2721036,
-      "required": true
-    },
-    {
-      "projectID": 220318,
-      "fileID": 2715506,
-      "required": true
-    },
-    {
-      "projectID": 228815,
-      "fileID": 2699055,
-      "required": true
-    },
-    {
-      "projectID": 228816,
-      "fileID": 2699056,
-      "required": true
-    },
-    {
-      "projectID": 245174,
-      "fileID": 2755787,
-      "required": true
-    },
-    {
-      "projectID": 247111,
-      "fileID": 2698796,
-      "required": true
-    },
-    {
-      "projectID": 79616,
-      "fileID": 2621015,
-      "required": true
-    },
-    {
-      "projectID": 291499,
-      "fileID": 2685154,
-      "required": true
-    },
-    {
-      "projectID": 256141,
-      "fileID": 2670073,
-      "required": true
-    },
-    {
-      "projectID": 268566,
-      "fileID": 2721344,
-      "required": true
-    },
-    {
-      "projectID": 268567,
-      "fileID": 2721345,
-      "required": true
-    },
-    {
-      "projectID": 246010,
-      "fileID": 2694397,
-      "required": true
-    },
-    {
-      "projectID": 241665,
-      "fileID": 2707714,
-      "required": true
-    },
-    {
-      "projectID": 257814,
-      "fileID": 2705492,
-      "required": true
-    },
-    {
-      "projectID": 257818,
-      "fileID": 2703258,
-      "required": true
-    },
-    {
-      "projectID": 228027,
-      "fileID": 2574880,
-      "required": true
-    },
-    {
-      "projectID": 74120,
-      "fileID": 2711439,
-      "required": true
-    },
-    {
-      "projectID": 277631,
-      "fileID": 2624386,
-      "required": true
-    },
-    {
-      "projectID": 224369,
-      "fileID": 2223720,
-      "required": true
-    },
-    {
-      "projectID": 250294,
-      "fileID": 2622900,
-      "required": true
-    },
-    {
-      "projectID": 250363,
-      "fileID": 2715657,
-      "required": true
-    },
-    {
-      "projectID": 265642,
-      "fileID": 2656626,
-      "required": true
-    },
-    {
-      "projectID": 306626,
-      "fileID": 2701956,
-      "required": true
-    },
-    {
-      "projectID": 306770,
-      "fileID": 2704883,
-      "required": true
-    },
-    {
-      "projectID": 245755,
-      "fileID": 2624701,
-      "required": true
-    },
-    {
-      "projectID": 262366,
-      "fileID": 2712474,
-      "required": true
-    },
-    {
-      "projectID": 267939,
-      "fileID": 2692303,
-      "required": true
-    },
-    {
-      "projectID": 243121,
-      "fileID": 2722372,
-      "required": true
-    },
-    {
-      "projectID": 223666,
-      "fileID": 2705585,
-      "required": true
-    },
-    {
-      "projectID": 285492,
-      "fileID": 2705304,
-      "required": true
-    },
-    {
-      "projectID": 306028,
-      "fileID": 2762334,
       "required": true
     }
   ],
@@ -632,7 +637,7 @@
   "minecraft": {
     "modLoaders": [
       {
-        "id": "forge-14.23.5.2838",
+        "id": "forge-14.23.5.2847",
         "primary": true
       }
     ],
@@ -641,5 +646,5 @@
   "name": "Firmum Libra",
   "overrides": "overrides",
   "projectID": 313193,
-  "version": "0.3.4"
+  "version": "0.3.4RC"
 }
